Correct education error in html and css

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link" href="#volunteer-section">Volunteer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#work-experience-section">Work Experience</a>
+                    <a class="nav-link" href="#work-section">Work Experience</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact-section">Contact</a>
@@ -95,10 +95,62 @@
 
       <div class="container-fluid">
         <h2>Education</h2>
-        <h3>National University of Singapore, Bachelor of Computing (Hons) in Computer Science (Specialisation in Artificial Intelligence) with Minor in Management</h3>
-        <p>Aug 2018 - now</p>
-        <p>Current CAP: 4.21</p>
-        <p>Expected Date of Graduation: June 2022</p>
+        <div class="accordion" id="accordion-eduction">
+          <div class="card">
+            <div class="card-header" id="eduction-1">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseEducation1" aria-expanded="false" aria-controls="collapseEducation1">
+                  Bachelor of Computing (Hons) in Computer Science, National University of Singapore,
+                </button>
+              </h2>
+            </div>
+            <div id="collapseEducation1" class="collapse" aria-labelledby="eduction-1" data-parent="#accordion-eduction">
+              <div class="card-body">
+                <p>Aug 2018 - now</p>
+                <ul>
+                  <li>Current CAP: 4.21</li>
+                  <li>Expected Date of Graduation: June 2022</li>
+                  <li>Specialisation in Artificial Intelligence and Computer Graphics</li>
+                  <li>Minor in Management</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="eduction-2">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseEducation2" aria-expanded="false" aria-controls="collapseEducation2">
+                  GCE 'A' Levels, UAS -  85/90, National Junior College, Science
+                </button>
+              </h2>
+            </div>
+            <div id="collapseEducation2" class="collapse" aria-labelledby="eduction-2" data-parent="#accordion-eduction">
+              <div class="card-body">
+                <p>2016 - 2017</p>
+                <ul>
+                  <li>GCE 'A' Levels 3 Distinctions: H2 Mathematics, H2 Physics and H2 Chemistry</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="eduction-3">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseEducation3" aria-expanded="false" aria-controls="collapseEducation3">
+                  GCE 'O' Levels with 9 Distinctions, Commonwealth Secondary School
+                </button>
+              </h2>
+            </div>
+            <div id="collapseEducation3" class="collapse" aria-labelledby="eduction-3" data-parent="#accordion-eduction">
+              <div class="card-body">
+                <p>2012 - 2015</p>
+                <ul>
+                  <li>GCE 'O' Levels 9 Distinctions: Elementary Mathematics, Additional Mathematics, Pure Physics, Pure Chemistry, Pure Biology, etc.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -141,17 +193,17 @@
       <hr>
       <div class="container-fluid">
         <h2>Projects and Hackathons</h2>
-        <div class="accordion" id="accordion-volunteer">
+        <div class="accordion" id="accordion-projects">
           <div class="card">
             <div class="card-header" id="projects-1">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseProject1" aria-expanded="false" aria-controls="collapseProject1">
                   CS2103T Software engineering "EzWatchList"
                 </button>
               </h2>
             </div>
 
-            <div id="collapseOne" class="collapse" aria-labelledby="projects-1" data-parent="#accordion-projects">
+            <div id="collapseProject1" class="collapse" aria-labelledby="projects-1" data-parent="#accordion-projects">
               <div class="card-body">
                 <p>A show tracker that allows users to search and add shows to their watchlist</p>
               </div>
@@ -160,12 +212,12 @@
           <div class="card">
             <div class="card-header" id="projects-2">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseProject2" aria-expanded="false" aria-controls="collapseProject2">
                   Independent Software Development Project (Orbital) "SaveMe"
                 </button>
               </h2>
             </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="projects-2" data-parent="#accordion-projects">
+            <div id="collapseProject2" class="collapse" aria-labelledby="projects-2" data-parent="#accordion-projects">
               <div class="card-body">
                 <p>Awarded Project Gemini</p>
                 <p>A financial tracker that allows users to manage their expenses and income</p>
@@ -186,13 +238,13 @@
           <div class="card">
             <div class="card-header" id="cca-1">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseCca1" aria-expanded="false" aria-controls="collapseCca1">
                   Executive in Finance, AIESEC in NUS
                 </button>
               </h2>
             </div>
 
-            <div id="collapseOne" class="collapse" aria-labelledby="cca-1" data-parent="#accordion-cca">
+            <div id="collapseCca1" class="collapse" aria-labelledby="cca-1" data-parent="#accordion-cca">
               <div class="card-body">
                 <p>Aug 2019 - now</p>
                 <ul>
@@ -214,12 +266,12 @@
           <div class="card">
             <div class="card-header" id="cca-2">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseCca2" aria-expanded="false" aria-controls="collapseCca2">
                   Executive in Publicity for E-Open Day and Union Camp, NUSSU
                 </button>
               </h2>
             </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="cca-2" data-parent="#accordion-cca">
+            <div id="collapseCca2" class="collapse" aria-labelledby="cca-2" data-parent="#accordion-cca">
               <div class="card-body">
                 <p>Nov 2019 - now</p>
                 <ul>
@@ -232,12 +284,12 @@
           <div class="card">
             <div class="card-header" id="cca-3">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseCca3" aria-expanded="false" aria-controls="collapseCca3">
                   Float Head, School of Computing RAG Committee
                 </button>
               </h2>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="cca-3" data-parent="#accordion-cca">
+            <div id="collapseCca3" class="collapse" aria-labelledby="cca-3" data-parent="#accordion-cca">
               <div class="card-body">
                 <p>Dec 2018 - Aug 2019</p>
                 <ul>
@@ -249,12 +301,12 @@
           <div class="card">
             <div class="card-header" id="cca-4">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseCca4" aria-expanded="false" aria-controls="collapseCca4">
                   Badminton
                 </button>
               </h2>
             </div>
-            <div id="collapseFour" class="collapse" aria-labelledby="cca-4" data-parent="#accordion-cca">
+            <div id="collapseCca4" class="collapse" aria-labelledby="cca-4" data-parent="#accordion-cca">
               <div class="card-body">
                 <p>2012-2017</p>
                 <ul>
@@ -279,15 +331,15 @@
           <div class="card">
             <div class="card-header" id="volunteer-1">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseVolunteer1" aria-expanded="false" aria-controls="collapseVolunteer1">
                   Chairperson, Student-initiated project, Project Cranes
                 </button>
               </h2>
             </div>
 
-            <div id="collapseOne" class="collapse" aria-labelledby="volunteer-1" data-parent="#accordion-volunteer">
+            <div id="collapseVolunteer1" class="collapse" aria-labelledby="volunteer-1" data-parent="#accordion-volunteer">
               <div class="card-body">
-                <p>ANov 2016 - Jul 2017</p>
+                <p>Nov 2016 - Jul 2017</p>
                 <ul>
                   <li>Responsible for coordinating with the person in charge at Sree Narayana Mission Home</li>
                   <li>Organised a series of activities with the elderliesafter understanding their needs</li>
@@ -298,12 +350,12 @@
           <div class="card">
             <div class="card-header" id="volunteer-2">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseVolunteer2" aria-expanded="false" aria-controls="collapseVolunteer2">
                   Committee Member, Student-initiated project, NJBT Carnival
                 </button>
               </h2>
             </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="volunteer-2" data-parent="#accordion-volunteer">
+            <div id="collapseVolunteer2" class="collapse" aria-labelledby="volunteer-2" data-parent="#accordion-volunteer">
               <div class="card-body">
                 <p>Jan - Jul 2017</p>
                 <ul>
@@ -316,28 +368,45 @@
       </div>
     </section>
 
-    <!-- Work Experience Section -->
-    <section id="work-experience-section">
+    <!-- Work Section -->
+    <section id="work-section">
       <hr>
 
       <div class="container-fluid">
-
         <h2>Work Experience</h2>
+        <div class="accordion" id="accordion-work">
+          <div class="card">
+            <div class="card-header" id="work-1">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseWork1" aria-expanded="false" aria-controls="collapseWork1">
+                  Part-time Private Tuitor
+                </button>
+              </h2>
+            </div>
 
-        <div class="row">
-          <div class="feature-box col-lg-6">
-            <h3>Part-time Private Tuitor</h3>
-            <p>Mar 2018 - now</p>
-            <p>Prepare materials and tutor secondary school students in Mathematics and Physics</p>
+            <div id="collapseWork1" class="collapse" aria-labelledby="work-1" data-parent="#accordion-work">
+              <div class="card-body">
+                <p>Mar 2018 - now</p>
+                <p>Prepare materials and tutor secondary school students in Mathematics and Physics</p>
+              </div>
+            </div>
           </div>
-
-          <div class="feature-box col-lg-6">
-            <h3>Admin Executive, St. Hua Private School</h3>
-            <p>Dec 2017 - Feb 2018</p>
-            <p>Prepare materials and tutor secondary school students in Mathematics and Physics</p>
+          <div class="card">
+            <div class="card-header" id="work-2">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseWork2" aria-expanded="false" aria-controls="collapseWork2">
+                Admin Executive, St. Hua Private School
+                </button>
+              </h2>
+            </div>
+            <div id="collapseWork2" class="collapse" aria-labelledby="work-2" data-parent="#accordion-work">
+              <div class="card-body">
+                <p>Dec 2017 - Feb 2018</p>
+                <p>Assist the director in human resource management, data entry and telemarketing</p>
+              </div>
+            </div>
           </div>
         </div>
-
       </div>
     </section>
 
@@ -348,9 +417,10 @@
       <div class="container-fluid">
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Any queries or projects for collaboration?</h3>
-          <p class="contact-message">✓Web Development ✓iOS Development ✓Social Media Publicity ✓Private Tuition</p>
-          <a class="btn" href="mailto:michelleykw99@gmail.com">CONTACT ME</a>
+          <h3 class="intern-message">Any internship opportunities or partnerships?</h3>
+          <p class="contact-message">✓Web Development ✓iOS Development ✓AI</p>
+          <p class="contact-message">✓Social Media Publicity ✓Private Tuition (Secondary)</p>
+          <a class="btn contact-btn" href="mailto:michelleykw99@gmail.com">CONTACT ME</a>
         </div>
       </div>
     </section>
