Update links to open new tab

--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
 
   <!-- Footer Section -->
   <section id="footer-section">
-    <i class="social-icon fab fa-instagram"><a class="footer-link" href="https://www.instagram.com/mychellexx">Instagram</a></i>
+    <i class="social-icon fab fa-instagram"><a class="footer-link" href="https://www.instagram.com/mychellexx" rel="noopener noreferrer" target="_blank">Instagram</a></i>
     <i class="social-icon fas fa-envelope"><a class="footer-link" href="mailto:michelleykw99@gmail.com">Email</a></i>
-    <i class="fab fa-linkedin"><a class="footer-link" href="https://www.linkedin.com/in/michelle-yong">LinkedIn</a></i>
-    <i class="social-icon fab fa-github"><a class="footer-link" href="https://github.com/michelleykw">Github</a></i>
+    <i class="fab fa-linkedin"><a class="footer-link" href="https://www.linkedin.com/in/michelle-yong" rel="noopener noreferrer" target="_blank">LinkedIn</a></i>
+    <i class="social-icon fab fa-github"><a class="footer-link" href="https://github.com/michelleykw" rel="noopener noreferrer" target="_blank">Github</a></i>
 
     <p class="copyright">© 2020 Michelle Yong.</p>
   </section>
