--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
           <img class="coding-img" src="https://image.flaticon.com/icons/svg/2920/2920244.svg" alt="coding-img">
           <h3>Programming and Web/iOS Development</h3>
           <ul>
-            <li>Proficient in multiple programming languages, including Java, Python, Javascript, HTML and CSS</li>
-            <li>Basic knowledge in databases, such as SQL and Firebase</li>
-            <li>Web Development, including use of Bootstrap 4</li>
+            <li>Proficient in multiple programming languages, including Java, Python, Javascript, TypeScript, HTML and CSS</li>
+            <li>Basic knowledge in databases, such as MongoDB, SQL and Firebase</li>
+            <li>Web Development, including use of React JS, Node JS, Bootstrap 4</li>
             <li>Android and iOS Development, including use of Android Studio</li>
-            <li>To learn: MongoDB, Ionic, Angular, React JS, Node JS, Swift</li>
+            <li>To learn: Ionic, Angular, Swift</li>
           </ul>
         </div>
         <div class="skill-row">
