--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <div id="profile-section">
       <img class="profile-img" src="images/profile.jpg" alt="profile-img">
       <h2 class="profile-heading">Hello</h2>
-      <p class="profile-desc">As a Year 2 undergraduate pursuing Bachelor of Computing in Computer
-         Science in NUS, I would be specialising in AI.
+      <p class="profile-desc">As a Year 3 undergraduate pursuing Bachelor of Computing in Computer
+         Science in NUS, I am specialising in Artificial Intelligence.
          I am highly interested in pursuing internships with start-ups to gain
          insight into the tech start-up scene in Singapore.</p>
     </div>
@@ -107,12 +107,10 @@
             <div id="collapseEducation1" class="collapse" aria-labelledby="eduction-1" data-parent="#accordion-eduction">
               <div class="card-body">
                 <p>Aug 2018 - now</p>
-                <ul>
-                  <li>Current CAP: 4.21</li>
-                  <li>Expected Date of Graduation: June 2022</li>
-                  <li>Specialisation in Artificial Intelligence and Computer Graphics</li>
-                  <li>Minor in Management</li>
-                </ul>
+                <li>Current CAP: 4.17</li>
+                <li>Expected Date of Graduation: June 2022</li>
+                <li>Specialisation in Artificial Intelligence</li>
+                <li>Minor in Management</li>
               </div>
             </div>
           </div>
@@ -127,9 +125,7 @@
             <div id="collapseEducation2" class="collapse" aria-labelledby="eduction-2" data-parent="#accordion-eduction">
               <div class="card-body">
                 <p>2016 - 2017</p>
-                <ul>
-                  <li>GCE 'A' Levels 3 Distinctions: H2 Mathematics, H2 Physics and H2 Chemistry</li>
-                </ul>
+                <li>GCE 'A' Levels 3 Distinctions: H2 Mathematics, H2 Physics and H2 Chemistry</li>
               </div>
             </div>
           </div>
@@ -144,9 +140,8 @@
             <div id="collapseEducation3" class="collapse" aria-labelledby="eduction-3" data-parent="#accordion-eduction">
               <div class="card-body">
                 <p>2012 - 2015</p>
-                <ul>
-                  <li>GCE 'O' Levels 9 Distinctions: Elementary Mathematics, Additional Mathematics, Pure Physics, Pure Chemistry, Pure Biology, etc.</li>
-                </ul>
+                <li>GCE 'O' Levels 9 Distinctions: Elementary Mathematics, Additional Mathematics, Pure Physics, Pure Chemistry, Pure Biology, etc.</li>
+                <li>Silver Award in School-Based Science Mentorship Program, 2013 - 2014</li>
               </div>
             </div>
           </div>
@@ -157,32 +152,31 @@
     <!-- Skills Sections -->
     <section id="skills-section">
       <hr>
-
       <div class="container-fluid">
         <h2>Skills</h2>
-        <div class="skill-row">
+        <div class="skill-row-1">
           <img class="coding-img" src="https://image.flaticon.com/icons/svg/2920/2920244.svg" alt="coding-img">
-          <h3>Programming and Web/iOS Development</h3>
-          <ul>
-            <li>Proficient in multiple programming languages, including Java, Python, Javascript, TypeScript, HTML and CSS</li>
+          <h3 class="skill-title">Programming and Web Development</h3>
+          <ul class="skill-text">
+            <li>Proficient in Javascript, HTML, CSS, Python, Java</li>
             <li>Basic knowledge in databases, such as MongoDB, SQL and Firebase</li>
             <li>Web Development, including use of React JS, Node JS, Bootstrap 4</li>
             <li>Android and iOS Development, including use of Android Studio</li>
-            <li>To learn: Ionic, Angular, Swift</li>
           </ul>
         </div>
-        <div class="skill-row">
-          <img class="ai-img" src="https://image.flaticon.com/icons/png/512/2591/2591949.png" alt="ai-img">
-          <h3>Artificial Intelligence and Machine Learning</h3>
-          <ul>
-            <li>Including Deep Learning and Augemented Reality (in process of learning)</li>
-          </ul>
-          </div>
-        <div class="skill-row">
+        <div class="skill-row-2">
           <img class="design-img" src="https://image.flaticon.com/icons/svg/2868/2868182.svg" alt="design-img">
-          <h3>Designing</h3>
-          <ul>
-            <li>Basic knowledge and use of Adobe Photshop, Illustor and XD, as well as GIMP and iMovie!</li>
+          <h3 class="skill-title">Design</h3>
+          <ul class="skill-text">
+            <li>UI/UX: Figma, Adobe XD</li>
+            <li>Software: Adobe Photshop, Illustor, GIMP, iMovie</li>
+          </ul>
+        </div>
+        <div class="skill-row-1">
+          <img class="ai-img" src="https://image.flaticon.com/icons/png/512/2591/2591949.png" alt="ai-img">
+          <h3 class="skill-title">Artificial Intelligence and Machine Learning</h3>
+          <ul class="skill-text">
+            <li>Use of Python Libraries, including numpy and sklearn</li>
           </ul>
         </div>
       </div>
@@ -195,17 +189,35 @@
         <h2>Projects and Hackathons</h2>
         <div class="accordion" id="accordion-projects">
           <div class="card">
-            <div class="card-header" id="projects-1">
+            <div class="card-header" id="projects-3">
               <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseProject1" aria-expanded="false" aria-controls="collapseProject1">
-                  CS2103T Software engineering "EzWatchList"
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseProject3" aria-expanded="false" aria-controls="collapseProject3">
+                  Shopee Code League 2020
                 </button>
               </h2>
             </div>
-
+            <div id="collapseProject3" class="collapse" aria-labelledby="projects-3" data-parent="#accordion-projects">
+              <div class="card-body">
+                <p>Jun 2020 – Aug 2020</p>
+                <li>Awarded Project Gemini</li>
+                <li>Tackled algorithm and data analytics challenges as a team of four</li>
+                <li>Utilised Java programming and Python libraries, including Pandas and NumPy</li>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="projects-1">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseProject1" aria-expanded="false" aria-controls="collapseProject1">
+                  CS2103T Software Engineering Team Project, EzWatchList
+                </button>
+              </h2>
+            </div>
             <div id="collapseProject1" class="collapse" aria-labelledby="projects-1" data-parent="#accordion-projects">
               <div class="card-body">
-                <p>A show tracker that allows users to search and add shows to their watchlist</p>
+                <p>Aug 2019 - Nov 2019</p>
+                <li>Command Line Interface application, allowing users to keep track of shows to watch and watched</li>
+                <li>Implemented search and sort algorithm in Java, performed unit testing and wrote documentation</li>
               </div>
             </div>
           </div>
@@ -213,14 +225,16 @@
             <div class="card-header" id="projects-2">
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseProject2" aria-expanded="false" aria-controls="collapseProject2">
-                  Independent Software Development Project (Orbital) "SaveMe"
+                  Independent Software Development Project, Orbital, $aveMe
                 </button>
               </h2>
             </div>
             <div id="collapseProject2" class="collapse" aria-labelledby="projects-2" data-parent="#accordion-projects">
               <div class="card-body">
-                <p>Awarded Project Gemini</p>
-                <p>A financial tracker that allows users to manage their expenses and income</p>
+                <p>Jun 2019 – Jul 2019</p>
+                <li>Awarded Project Gemini</li>
+                <li>Financial tracker application for keeping track of expenses based on targeted expenditure</li>
+                <li>Developed using Android Studio, Firebase and GIMP</li>
               </div>
             </div>
           </div>
@@ -239,27 +253,16 @@
             <div class="card-header" id="cca-1">
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseCca1" aria-expanded="false" aria-controls="collapseCca1">
-                  Executive in Finance, AIESEC in NUS
+                  Executive in Finance and External Relations, AIESEC in NUS
                 </button>
               </h2>
             </div>
-
             <div id="collapseCca1" class="collapse" aria-labelledby="cca-1" data-parent="#accordion-cca">
               <div class="card-body">
-                <p>Aug 2019 - now</p>
-                <ul>
-                  <li>Handles accounting and bookkeeping, audit and legalities for other departments</li>
-                  <li>Vice President, External Relations for National Leadership Development Conference 2020, AIESEC in Singapore, Oct 2019 – Jan 2020
-                    <ul>
-                      <li>Responsible for raising in-kind sponsors and one off sponsors for the conference</li>
-                    </ul>
-                  </li>
-                  <li>Product Pricing Research Team, May 2020 - now
-                    <ul>
-                      <li>Review current product pricings and integrate new products into pricing strategies to ensure sustainability</li>
-                    </ul>
-                  </li>
-                </ul>
+                <p>Aug 2019 - Jun 2020</p>
+                <li>Handles accounting and bookkeeping, audit and legalities for other departments</li>
+                <li>Led a team of three in raising three in-kind sponsors for the National Leadership Development Conference 2020 organised by AIESEC in Singaporeas the Vice President, External Relations, Oct 2019 – Jan 2020</li>
+                <li>Joined the Product Pricing Research Team and conducted market research and reviewed current product pricing, May 2020 - Jul 2020</li>
               </div>
             </div>
           </div>
@@ -267,17 +270,15 @@
             <div class="card-header" id="cca-2">
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseCca2" aria-expanded="false" aria-controls="collapseCca2">
-                  Executive in Publicity for E-Open Day and Union Camp, NUSSU
+                  Executive, Open Day Student Village Publicity Team, NUSSU
                 </button>
               </h2>
             </div>
             <div id="collapseCca2" class="collapse" aria-labelledby="cca-2" data-parent="#accordion-cca">
               <div class="card-body">
-                <p>Nov 2019 - now</p>
-                <ul>
-                  <li>Responsible for design of logo, poster and committee T-shirt</li>
-                  <li>Responsible for uploading Facebook and Instagram posts to promote the events</li>
-                </ul>
+                <p>Nov 2019 - Mar 2020</p>
+                <li>Designed Facebook and Instagram posts, using Photoshop and Illustrator</li>
+                <li>Click <a href="https://www.instagram.com/p/B9Av3BQFjW5/?utm_source=ig_web_copy_link">here</a> to view the posts</li>
               </div>
             </div>
           </div>
@@ -292,9 +293,8 @@
             <div id="collapseCca3" class="collapse" aria-labelledby="cca-3" data-parent="#accordion-cca">
               <div class="card-body">
                 <p>Dec 2018 - Aug 2019</p>
-                <ul>
-                  <li>Responsible for float design, safety, manpower allocation, budget allocation and spending</li>
-                </ul>
+                <li>Led float team in float design, manpower allocation, budget allocation and spending</li>
+                <li>Filmed a promotional video to publicise the float building. Click <a href="https://www.instagram.com/p/BzCuIcKFET5/?utm_source=ig_web_copy_link">here</a> to view.</li>
               </div>
             </div>
           </div>
@@ -311,20 +311,18 @@
                 <p>2012-2017</p>
                 <ul>
                   <li>Member in Badminton in Commonwealth Secondary School and <a href="https://nationaljc.moe.edu.sg/co-curricular-activities/badminton-2/">National Junior College</a></li>
-                  <li>Particpated in mulitple competitions, such as the A Division Badminton Competition</li>
+                  <li>Particpated in mulitple competitions, including the A Division Badminton Competition</li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </section>
 
     <!-- Volunteer Section -->
     <section id="volunteer-section">
       <hr>
-
       <div class="container-fluid">
         <h2>Volunteer</h2>
         <div class="accordion" id="accordion-volunteer">
@@ -376,6 +374,25 @@
         <h2>Work Experience</h2>
         <div class="accordion" id="accordion-work">
           <div class="card">
+            <div class="card-header" id="work-0">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseWork0" aria-expanded="false" aria-controls="collapseWork0">
+                  Product Intern, LoveBonito Pte Ltd
+                </button>
+              </h2>
+            </div>
+
+            <div id="collapseWork0" class="collapse" aria-labelledby="work-0" data-parent="#accordion-work">
+              <div class="card-body">
+                <p>Aug 2020 - now</p>
+                <li>Analyse end customer problems through data analysis</li>
+                <li>Update on onsite touchpoints and create pop-ups for websites using HTML, CSS and JavaScript</li>
+                <li>Create solutions through detailing out workflows and system interactions</li>
+                <li>Conduct A/B testing and participate in weekly sprints</li>
+              </div>
+            </div>
+          </div>
+          <div class="card">
             <div class="card-header" id="work-1">
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseWork1" aria-expanded="false" aria-controls="collapseWork1">
@@ -386,8 +403,8 @@
 
             <div id="collapseWork1" class="collapse" aria-labelledby="work-1" data-parent="#accordion-work">
               <div class="card-body">
-                <p>Mar 2018 - now</p>
-                <p>Prepare materials and tutor secondary school students in Mathematics and Physics</p>
+                <p>Mar 2018 - Jul 2020</p>
+                <li>Prepare materials and tutor secondary school students in Mathematics and Physics</li>
               </div>
             </div>
           </div>
@@ -402,7 +419,7 @@
             <div id="collapseWork2" class="collapse" aria-labelledby="work-2" data-parent="#accordion-work">
               <div class="card-body">
                 <p>Dec 2017 - Feb 2018</p>
-                <p>Assist the director in human resource management, data entry and telemarketing</p>
+                <li>Assist the director in human resource management, data entry and telemarketing</li>
               </div>
             </div>
           </div>
@@ -417,26 +434,25 @@
       <div class="container-fluid">
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3 class="intern-message">Any internship opportunities or partnerships?</h3>
-          <p class="contact-message">✓Web Development ✓iOS Development ✓AI</p>
-          <p class="contact-message">✓Social Media Publicity ✓Private Tuition (Secondary)</p>
-          <a class="btn contact-btn" href="mailto:michelleykw99@gmail.com">CONTACT ME</a>
+          <h3 class="intern-message">Feel free to contact me!</h3>
+          <p class="contact-message">✓Web Development  ✓Product Management  ✓AI</p>
+          <p>This page was written in HTML, CSS and Bootstrap.</p>
+          <a class="btn contact-btn" href="mailto:michelle.yong@u.nus.edu">CONTACT ME</a>
+
         </div>
       </div>
     </section>
-
   </div>
 
   <!-- Footer Section -->
   <section id="footer-section">
-    <i class="social-icon fab fa-instagram"><a class="footer-link" href="https://www.instagram.com/mychellexx" rel="noopener noreferrer" target="_blank">Instagram</a></i>
-    <i class="social-icon fas fa-envelope"><a class="footer-link" href="mailto:michelleykw99@gmail.com">Email</a></i>
+    <i class="social-icon fab fa-instagram"><a class="footer-link" href="https://www.instagram.com/immychelle" rel="noopener noreferrer" target="_blank">Instagram</a></i>
+    <i class="social-icon fas fa-envelope"><a class="footer-link" href="mailto:michelle.yong@u.nus.edu">Email</a></i>
     <i class="fab fa-linkedin"><a class="footer-link" href="https://www.linkedin.com/in/michelle-yong" rel="noopener noreferrer" target="_blank">LinkedIn</a></i>
     <i class="social-icon fab fa-github"><a class="footer-link" href="https://github.com/michelleykw" rel="noopener noreferrer" target="_blank">Github</a></i>
 
     <p class="copyright">© 2020 Michelle Yong.</p>
   </section>
-
 
   </body>
 </html>
